RESOLVED FIXED292750
REGRESSION (294575@main): [macOS] Content inset fill view no longer updates when resizing web view
https://bugs.webkit.org/show_bug.cgi?id=292750
Summary REGRESSION (294575@main): [macOS] Content inset fill view no longer updates w...
Wenson Hsieh
Reported 2025-05-08 17:32:49 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-08 17:33:35 PDT
Wenson Hsieh
Comment 2 2025-05-08 18:19:18 PDT
EWS
Comment 3 2025-05-08 21:22:19 PDT
Committed 294700@main (02a9e6a19034): <https://commits.webkit.org/294700@main> Reviewed commits have been landed. Closing PR #45141 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.