Source/WebKit/UIProcess/API/mac/WKWebViewPrivateForTestingMac.h
@@ -61,6 +61,8 @@
 - (void)_createFlagsChangedEventMonitorForTesting;
 - (BOOL)_hasFlagsChangedEventMonitorForTesting;
 
+@property (nonatomic, readonly) NSView *_contentInsetFillViewForTesting;
+
 @end
 
 #endif // !TARGET_OS_IPHONE
